# DiT4DiT

./: README.md  requirements.txt
decoupled_wbc/: pyproject.toml  server_zmq.sh
decoupled_wbc/aloha_feedback_server/: aloha_feedback_client.py  aloha_gripper_dds_bridge.py  start_aloha_bridge.sh
decoupled_wbc/docker/: .bashrc  Dockerfile.deploy  Dockerfile.deploy.jetson  kill_gr00t_wbc_processors.sh  run_docker.sh  run_docker_jetson.sh
decoupled_wbc/docker/entrypoint/: bash.sh
decoupled_wbc/external_dependencies/unitree_sdk2_python/example/g1/low_level/: g1_low_level_example.py
decoupled_wbc/gr00t_wbc/control/base/: humanoid_env.py
decoupled_wbc/gr00t_wbc/control/envs/g1/: g1_body.py  g1_env.py  g1_hand.py
decoupled_wbc/gr00t_wbc/control/envs/g1/sim/: base_sim.py  image_publish_utils.py  metric_utils.py  simulator_factory.py
decoupled_wbc/gr00t_wbc/control/envs/g1/utils/: command_sender.py  joint_safety.py  state_processor.py
decoupled_wbc/gr00t_wbc/control/main/teleop/: run_camera_viewer.py  run_dit4dit_inference_policy_loop.py  run_g1_control_loop.py  run_g1_data_exporter.py  run_teleop_policy_loop.py
decoupled_wbc/gr00t_wbc/control/main/teleop/configs/: configs.py  g1_29dof_gear_wbc.yaml  g1_aloha_example.yaml
decoupled_wbc/gr00t_wbc/control/policy/: compact_replay_policy.py  g1_decoupled_whole_body_policy.py  g1_gear_wbc_policy.py  identity_policy.py  interpolation_policy.py  lerobot_replay_policy.py  teleop_policy.py  wbc_policy_factory.py
decoupled_wbc/gr00t_wbc/control/robot_model/: robot_model.py
decoupled_wbc/gr00t_wbc/control/robot_model/instantiation/: __init__.py  g1.py
decoupled_wbc/gr00t_wbc/control/robot_model/model_data/g1/: g1_29dof_aloha.urdf  g1_29dof_aloha_reduced.urdf  pnp_bottle_43dof.xml
decoupled_wbc/gr00t_wbc/control/robot_model/model_data/g1/meshes/: aloha_base_link.STL  aloha_finger_link.STL  right_aloha_link_r.STL
decoupled_wbc/gr00t_wbc/control/robot_model/supplemental_info/: __init__.py
decoupled_wbc/gr00t_wbc/control/robot_model/supplemental_info/g1/: g1_aloha_supplemental_info.py  g1_supplemental_info.py
decoupled_wbc/gr00t_wbc/control/sensor/: composed_camera.py  oak.py  realsense.py
decoupled_wbc/gr00t_wbc/control/teleop/: teleop_retargeting_ik.py  teleop_streamer.py
decoupled_wbc/gr00t_wbc/control/teleop/pre_processor/fingers/: fingers.py
decoupled_wbc/gr00t_wbc/control/teleop/pre_processor/wrists/: wrists.py
decoupled_wbc/gr00t_wbc/control/teleop/solver/body/: body_ik_solver.py
decoupled_wbc/gr00t_wbc/control/teleop/solver/hand/: g1_aloha_gripper_ik_solver.py  g1_gripper_ik_solver.py
decoupled_wbc/gr00t_wbc/control/teleop/solver/hand/instantiation/: g1_aloha_hand_ik_instantiation.py
decoupled_wbc/gr00t_wbc/control/teleop/streamers/: dummy_streamer.py  keyboard_streamer.py  pico_streamer.py
decoupled_wbc/gr00t_wbc/control/utils/: img_viewer.py  keyboard_dispatcher.py  network_utils.py  ros_utils.py  service.py  signal_handler.py
decoupled_wbc/gr00t_wbc/control/visualization/: humanoid_visualizer.py
decoupled_wbc/gr00t_wbc/data/: exporter.py  utils.py  video_writer.py
decoupled_wbc/gr00t_wbc/data/viz/: rerun_viz.py
decoupled_wbc/gr00t_wbc/sim2mujoco/resources/robots/g1/: g1_gear_wbc.yaml
decoupled_wbc/scripts/: deploy_g1_real_robot.py
docs/: real_unitree_g1.md
inference_records/: README.md  joints_steps_160000_episode_000000_continuous_first_step.json  joints_steps_160000_episode_000000_continuous_first_step.npz  joints_steps_52000_episode_000000_result.json  joints_steps_56000_episode_000000_full.json  joints_steps_56000_episode_000000_full.npz  joints_steps_60000_episode_000000_full.json  joints_steps_60000_episode_000000_full.npz  (+7 more)
(+54 files in other folders)
